--- a/TaskPro/index.html
+++ b/TaskPro/index.html
@@ -16,7 +16,7 @@
         <input type="password" id="password"><br>
         <label for="rePassword">RE-PASSWORD</label><br>
         <input type="password" id="rePassword"><br>
-        <input type="submit" onclick="AddRegister();" value="REGISTER">
+        <input type="button" onclick="AddRegister();" value="REGISTER">
     </form>
     <hr>
     <form action="#">
